[gd_scene load_steps=7 format=3 uid="uid://tl87vg12ot4j"]

[ext_resource type="Script" uid="uid://b2q5hcosqsvkl" path="res://scripts/problem_new2.gd" id="1_4btlg"]
[ext_resource type="PackedScene" uid="uid://dqbsyjm472g3s" path="res://components/header.tscn" id="2_uvqo4"]
[ext_resource type="PackedScene" uid="uid://bx20db8xc8vfv" path="res://components/wall_widget.tscn" id="3_spjhp"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="4_ikbqg"]
[ext_resource type="PackedScene" uid="uid://dtcl56kq2beg1" path="res://components/nav_bar.tscn" id="5_fwn68"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukg4v"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 1
border_color = Color(0, 0, 0, 1)

[node name="ProblemNew" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4btlg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" parent="VBoxContainer" instance=ExtResource("2_uvqo4")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WallWidget" parent="VBoxContainer/MarginContainer" instance=ExtResource("3_spjhp")]
layout_mode = 2

[node name="ControlsWall" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/ControlsWall"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ukg4v")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ControlsWall/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ControlsWall/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ButtonCancel" type="Button" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ikbqg")
text = "‚ùå Cancel"

[node name="ButtonSave" type="Button" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_ikbqg")
text = "üíæ Save"

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("5_fwn68")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
